# cua-agent-sdk-docker-container-snapshot

./: .gitignore  README.md  pyproject.toml
.snapshots/: index.json
.snapshots/metadata/: 5c3f1c9a-a15f-4072-aa35-ef59e839ced9.json
examples/: basic_usage.py  cua_snapshot_test.py  minimal_test.py
src/snapshot_manager/: __init__.py  callback.py  cli.py  interfaces.py  manager.py  models.py  storage.py
src/snapshot_manager/providers/: docker_provider.py
tests/: test_snapshot_manager.py
